dash-bord has been updated

--- a/public/main.css
+++ b/public/main.css
@@ -161,7 +161,7 @@ main p{
   
   #customers tr:nth-child(even){background-color: #f2f2f2;}
   
-  #customers tr:hover {background-color: #ddd;}
+  /* #customers tr:hover {background-color: #ddd;} */
   
   #customers th {
     padding-top: 12px;
@@ -183,7 +183,7 @@ main p{
   
   #dash-request tr:nth-child(even){background-color: #f2f2f2;}
   
-  #dash-request tr:hover {background-color: #ddd;}
+  /* #dash-request tr:hover {background-color: #ddd;} */
   
   #dash-request th {
     padding-top: 12px;
